	* kern/thread.h (thread_start, kernel_thread, thread_priority,
	thread_set_own_priority, thread_max_priority, thread_policy,
	consider_thread_collect, stack_privilege): Add prototypes.
	* kern/timer.h (timer_normalize, timer_init, init_timers): Add
	prototypes.
	* vm/vm_map.h (vm_map_lookup_entry, vm_map_entry_delete): Add
	prototypes.

2008-07-04  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* linux/src/drivers/net/rtl8139.c (rtl8129_open): Move IRQ
	initialization after ring initialization.

2008-07-02  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* linux/dev/include/asm/segment.h (__put_user, __get_user): Add
	always_inline attribute.

2008-06-29  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* i386/i386/fpu.c (fpintr): Do not panic if the we receive the
	interrupt twice in the same thread.

2008-05-28  Thomas Schwinge  <tschwinge@gnu.org>

	[bug #23417, patch #6508 -- Building with -g3]
	* Makefile.am (MIGCOM): Revert the 2008-05-19 change.

2008-05-25  Andrei Barbu <teval0@gmail.com>

	* ddb/db_aout.c (aout_db_symbol_values): Add stab parameter.
	* ddb/db_sym.h (db_sym_switch): Add stab parameter to symbol_values
	member.
	(X_db_symbol_values): Pass stab parameter to symbole_values function.

2008-05-19  Thomas Schwinge  <tschwinge@gnu.org>

	[patch #6508 -- Building with -g3]
	* Makefile.am (MIGCOM): Let it filter through CPP again.
	Suggested by Andrei Barbu <teval0@gmail.com>.

2008-05-09  Andrei Barbu  <teval0@gmail.com>

	* i386/i386/loose_ends.c (DELAY): Use volatile qualifier instead of
	register to prevent optimization.

2008-03-10  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* doc/Makefrag.am: Fix typo.

2008-03-07  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* i386/i386/locore.S (syscall): Clear direction flag at entry.

2008-02-06  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* linux/src/drivers/block/triton.c (ide_init_triton): Enable Bus
	Mastering if not enabled by BIOS.
